fix disclaimer text, fix spacing, add exit button

--- a/styles.css
+++ b/styles.css
@@ -51,10 +51,20 @@ body {
 }
 
 .disclaimer {
-    height: 50px;
+    height: 20px;
+    padding: 10px;
+    background-color: rgba(255, 24, 24, 0.129);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.header {
+.disclaimer p {
+    margin: 0px;
+}
+
+#header {
     display: flex;
     position: absolute;
     top: 0;
